# Muon-Detector-Simulation

./: CMakeLists.txt  hep_analysis.py  muon_sim.cc  rel_mc_densityplot.py  rel_mc_plot.py  rel_mc_simV2.cpp  relativistic_mc_sim.cpp  run.mac  run_offset_scan.sh
analysis/: estimate_event_rate.py  hep_analysis.py  resample_comsol_mesh_to_grid.py  summarize_offset_scan.py  validate_comsol_exports.py
build_fixed/: CMakeCache.txt  Makefile  cmake_install.cmake  muon_selection_data_nt_MuonData_t0.csv  muon_selection_data_nt_MuonData_t1.csv  muon_selection_data_nt_MuonData_t10.csv  muon_selection_data_nt_MuonData_t11.csv  muon_selection_data_nt_MuonData_t12.csv  muon_selection_data_nt_MuonData_t13.csv  muon_selection_data_nt_MuonData_t14.csv  muon_selection_data_nt_MuonData_t15.csv  muon_selection_data_nt_MuonData_t16.csv  muon_selection_data_nt_MuonData_t17.csv  muon_selection_data_nt_MuonData_t18.csv  muon_selection_data_nt_MuonData_t19.csv  muon_selection_data_nt_MuonData_t2.csv  muon_selection_data_nt_MuonData_t20.csv  muon_selection_data_nt_MuonData_t21.csv  muon_selection_data_nt_MuonData_t3.csv  muon_selection_data_nt_MuonData_t4.csv  muon_selection_data_nt_MuonData_t5.csv  muon_selection_data_nt_MuonData_t6.csv  muon_selection_data_nt_MuonData_t7.csv  muon_selection_data_nt_MuonData_t8.csv  muon_selection_data_nt_MuonData_t9.csv  muon_sim  run.mac
include/: ActionInitialization.hh  COMSOLMagneticField.hh  DetectorConstruction.hh  DipoleField.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SimConfig.hh  SteppingAction.hh
output/: offset_scan_summary.csv  (+34 more)
(+10 files in other folders)
